--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html",
+    "build-gh": "parcel build src/index.html --out-dir dist --public-url /BearsAndBees/",
+		"start": "parcel src/index.html -p 8000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
